add change language, fix use 'in'

--- a/src/app/locales/en-US/translation.json
+++ b/src/app/locales/en-US/translation.json
@@ -57,6 +57,7 @@
     "my_points": "My Points",
     "logout": "Logout",
     "signin": "Sign In",
-    "signup": "Sign Up"
+    "signup": "Sign Up",
+    "most_searched_topics": "Most searched topics:"
   }
 }
