--- a/src/app/locales/pt-BR/translation.json
+++ b/src/app/locales/pt-BR/translation.json
@@ -57,6 +57,7 @@
     "my_points": "Meus Pontos",
     "logout": "Sair",
     "signin": "Entrar",
-    "signup": "Cadastrar"
+    "signup": "Cadastrar",
+    "most_searched_topics": "Tópicos mais pesquisados:"
   }
 }
