feat(i18n, data): add language persistence and prevent premature data loading

--- a/src/app/locales/en-US/translation.json
+++ b/src/app/locales/en-US/translation.json
@@ -43,7 +43,7 @@
     "forgot_password_description": "Enter your email to receive the reset link.",
     "send_reset_link_button": "Send reset link",
     "create_edit_live_title": "Create and Edit Live",
-    "ask_0ui_placeholder": "Ask 0UI to build...",
+    "ask_0ui_placeholder": "Let 0UI create for you...",
     "generating_code": "Generating code...",
     "code_editor": "Code Editor",
     "download_button": "Download",
