--- a/src/app/locales/pt-BR/translation.json
+++ b/src/app/locales/pt-BR/translation.json
@@ -43,7 +43,7 @@
     "forgot_password_description": "Digite seu e-mail para receber o link de redefinição.",
     "send_reset_link_button": "Enviar link de redefinição",
     "create_edit_live_title": "Crie e Edite ao Vivo",
-    "ask_0ui_placeholder": "Peça ao 0UI para criar...",
+    "ask_0ui_placeholder": "Deixe o 0UI criar para você...",
     "generating_code": "Gerando código...",
     "code_editor": "Editor de Código",
     "download_button": "Baixar",
